@@ -115,18 +115,6 @@
 }
 @end
 
-@interface TMXIsoVertexZ : TileDemo
-{
-	CCSprite *tamara;
-}
-@end
-
-@interface TMXOrthoVertexZ : TileDemo
-{
-	CCSprite *tamara;
-}
-@end
-
 @interface TMXIsoMoveLayer : TileDemo
 {}
 @end
